@@ -13,7 +13,7 @@ my $build = Module::Build->new(
         'parent' => 0,
         'Carp' => 0,
         'Exporter' => 0,
-        'LWP::UserAgent' => 0,
+        'LWP::RobotUA' => 0,
         'URI' => '1.59',
         'Scalar::Util' => 0,
         'String::CamelCase' => 0,
