@@ -4,7 +4,9 @@ NAME
 SYNOPSIS
       use WWW::GoKGS;
 
-      my $gokgs = WWW::GoKGS->new;
+      my $gokgs = WWW::GoKGS->new(
+          from => 'user@example.com'
+      );
 
       # Game archives
       my $game_archives_1 = $gokgs->scrape( '/gameArchives.jsp?user=foo' );
@@ -53,9 +55,26 @@ DESCRIPTION
         and WWW::GoKGS::Scraper::TournGames.
 
   ATTRIBUTES
+    $email_address = $gokgs->from : Required
+        Returns your email address which is used to construct LWP::RobotUA
+        object. The email address is used to generate the From request
+        header which indicates who is making the request. This attribute is
+        required and read-only.
+
+          my $gokgs = WWW::GoKGS->new(
+              from => 'user@example.com' # used to construct LWP::RobotUA
+          );
+
     $UserAgent = $gokgs->user_agent
-        Returns an LWP::UserAgent object which is used to "GET" the
-        requested resource. This attribute is read-only.
+        Returns a user agent object which is used to "GET" the requested
+        resource. Defaults to LWP::RobotUA object which consults
+        "http://www.gokgs.com/robots.txt" before sending HTTP requests.
+
+        NOTE: "LWP::RobotUA" fails to read "/robots.txt" since the KGS web
+        server doesn't returns the Content-Type response header as of June
+        23rd, 2014. This module can not solve this problem.
+
+        You can also set your own user agent object as follows:
 
           use LWP::UserAgent;
 
@@ -65,6 +84,11 @@ DESCRIPTION
               )
           );
 
+        NOTE: You should set a delay between requests to avoid overloading
+        the KGS server.
+
+        This attribute is read-only.
+
     $CodeRef = $gokgs->html_filter
         Returns an HTML filter. Defaults to an anonymous subref which just
         returns the given argument ("sub { $_[0] }"). The callback is called
@@ -72,6 +96,7 @@ DESCRIPTION
         This attribute is read-only.
 
           my $gokgs = WWW::GoKGS->new(
+              from => 'user@example.com',
               html_filter => sub {
                   my $html = shift;
                   $html =~ s/<.*?>//g; # strip HTML tags
@@ -88,6 +113,7 @@ DESCRIPTION
           use Time::Piece qw/gmtime/;
 
           my $gokgs = WWW::GoKGS->new(
+              from => 'user@example.com',
               date_filter => sub {
                   my $date = shift; # => "2014-05-17T19:05Z"
                   gmtime->strptime( $date, '%Y-%m-%dT%H:%MZ' );
@@ -208,7 +234,7 @@ DESCRIPTION
           $gokgs->set_scraper(
               '/fooBar.jsp' => WWW::GoKGS::Scraper::FooBar->new,
               '/barBaz.jsp' => scraper {
-                   process '.bar', baz => 'TEXT;
+                   process '.bar', baz => 'TEXT';
                    ...
               }
           );
