@@ -1,5 +1,7 @@
 Revision history for Perl extension WWW::GoKGS.
 
+  - WWW::GoKGS#user_agent defaults to LWP::RobotUA
+
 0.11 Jun 22nd, 2014
 
   [DOCUMENTATION]
